Sidebar Fixed Bugs (little spacing bugs)

--- a/src/Components/SideBar/sidebar.css
+++ b/src/Components/SideBar/sidebar.css
@@ -172,10 +172,6 @@
     cursor: pointer;
 }
 
-.login_btn {
-    width: 100%;
-}
-
 .replyNotif {
     position: relative;
 }
